--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
-.App {
-  text-align: center;
+.temprature-background {
+  background: linear-gradient(to right, #00ffff, #fff700, #ff8c00);
+  background-size: 2000%; 
+  background-position: 100%, 0%;
+  height: 100vh;
+  /* width: 100vw; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  bottom: 10px;
+  left: 5%;
+  position: absolute;
+  width: 90%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.slider {
+  color: black !important;
 }
